--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,99 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>SISTEMA DE PUNTO DE VENTA</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12">
+        <ion-item>
+          <ion-icon name="search" slot="start"></ion-icon>
+          <ion-input placeholder="CLIENTE"></ion-input>
+          <ion-button color="warning">OK</ion-button>
+        </ion-item>
+      </ion-col>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+      <ion-col size="12">
+        <ion-item>
+          <ion-icon name="search" slot="start"></ion-icon>
+          <ion-input placeholder="BUSCAR PRODUCTO"></ion-input>
+        </ion-item>
+      </ion-col>
+
+      <!-- Producto Añadido -->
+      <ion-card>
+        <ion-item>
+          <ion-label>ACEITE 120ML</ion-label>
+          <ion-button color="danger" slot="end">
+            <ion-icon name="trash"></ion-icon>
+          </ion-button>
+        </ion-item>
+        <ion-grid>
+          <ion-row>
+            <ion-col size="4">
+              <ion-item>
+                <ion-label position="stacked">Cantidad</ion-label>
+                <ion-input type="number"></ion-input>
+              </ion-item>
+            </ion-col>
+            <ion-col size="4">
+              <ion-item>
+                <ion-label position="stacked">Precio</ion-label>
+                <ion-input type="number"></ion-input>
+              </ion-item>
+            </ion-col>
+            <ion-col size="4">
+              <ion-item>
+                <ion-label position="stacked">Total</ion-label>
+                <ion-input type="number" disabled></ion-input>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="4">
+              <ion-item>
+                <ion-label position="stacked">Subtotal</ion-label>
+                <ion-input type="number" disabled></ion-input>
+              </ion-item>
+            </ion-col>
+            <ion-col size="4">
+              <ion-item>
+                <ion-label position="stacked">IVA</ion-label>
+                <ion-input type="number" disabled></ion-input>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-card>
+
+      <!-- Pago y Cambio -->
+      <ion-card>
+        <ion-item>
+          <ion-label>Total:</ion-label>
+          <ion-note slot="end">0.00</ion-note>
+        </ion-item>
+        <ion-item>
+          <ion-label>Paga:</ion-label>
+          <ion-input type="number"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label>Cambio:</ion-label>
+          <ion-note slot="end">0.00</ion-note>
+        </ion-item>
+        <ion-row>
+          <ion-col>
+            <ion-button color="success" expand="full">PAGAR</ion-button>
+          </ion-col>
+          <ion-col>
+            <ion-button color="danger" expand="full">CANCELAR</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-card>
+    </ion-row>
+  </ion-grid>
 </ion-content>
