--- a/src/app/ventas/ventas.page.html
+++ b/src/app/ventas/ventas.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>VENTAS</ion-title>
+    <ion-title>VENTAS LISTADAS</ion-title>
   </ion-toolbar>
 </ion-header>
 
